<resources>
    <string name="app_name">EEB3</string>
    <string name="home">home</string>
    <string name="homework">homework</string>
    <string name="logo">logo</string>
    <string name="world">world</string>
    <string name="settings">settings</string>
    <string name="websites">websites</string>
    <string name="Websites">Websites</string>
    <string name="Settings">Settings</string>
    <string name="Homework">Homework</string>
    <string name="Home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_page_fragment">home page fragment</string>
    <string name="homework_page">This is the home page</string>
    <string name="website_page">This is the website page</string>
    <string name="settings_page">This is the settings page</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Assignments">Assignments</string>
    <string name="hint_minute">Minute</string>
    <string name="message_minutes">Please Enter Minutes…</string>
    <string name="timetable">Timetable</string>
    <string name="title_activity_eeb3_devs">EEB3DevsActivity</string>
    <string name="title_timetable">Timetable</string>
    <string name="title_assignments">Assignments</string>
    <string name="title_websites">Websites</string>
    <string name="title_settings">Settings</string>
    <string name="Timetable">Timetables</string>
    <string name="version_number">Version number</string>
    <string name="Credits">Credits</string>
    <string name="Chief_Developer">Chief Developer</string>
    <string name="Anirudhh_Ramesh">Anirudhh RAMESH</string>
    <string name="main_activity_name">All Tasks</string>
    <string name="add_task_activity_name">Add a New Task</string>
    <string name="priority_1">1</string>
    <string name="priority_2">2</string>
    <string name="priority_3">3</string>
    <string name="edit_task_description">Describe your task&#8230;</string>
    <string name="priority_string">Priority</string>
    <string name="high_priority">High</string>
    <string name="med_priority">Medium</string>
    <string name="low_priority">Low</string>
    <string name="add_button">Add</string>
    <string name="Schedule">Schedule</string>
    <string name="notifications">Notifications</string>
    <string name="enabled">Enabled</string>
    <string name="v_1_0_1">V.1.0.1</string>
    <string name="view">View</string>
    <string name="copyright_2017_eeb3_devs_all_rights_reserved">Copyright © 2017 EEB3 Devs, All rights reserved.</string>
    <string name="comit_des_l_ves">Comité Des Élèves</string>
    <string name="the_official_student_committee_that_serves_our_school">The official student committee that serves our school</string>
    <string name="open">Open</string>
    <string name="events_committee">Events Committee</string>
    <string name="the_committee_that_works_together_to_enrich_the_school">The committee that works together to enrich the school</string>
    <string name="eeb3_developers">EEB3 Developers</string>
    <string name="website_of_the_developer_who_brought_everything_into_an_app">Website of the developer who brought everything into an app</string>
    <string name="sms_website">SMS Website</string>
    <string name="all_your_grades_calendars_and_timetables_in_one_website">All your grades, calendars and timetables in one website</string>
    <string name="eeb3_website">EEB3 Website</string>
    <string name="the_official_website_of_the_eeb3_with_important_updates">The official website of the EEB3 with important updates</string>
    <string name="add_new_item">Add New Item</string>
    <string name="sibling_support">Sibling Support</string>
    <string name="experienced_advisor">Experienced Advisor</string>
    <string name="logos_and_design">Logos and Design</string>
    <string name="teacher">Teacher</string>
    <string name="teacher_name_goes_here">Teacher name goes here</string>
    <string name="eeb3_app">EEB3 App</string>
    <string name="languages">Languages</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="disabled">Disabled</string>
    <string name="CheckAbsences">Check Absences</string>
    <string name="versionNumber">Version 2.0</string>
    <string name="projects">Projects</string>
    <string name="enter_a_task_title">Enter a task title…</string>
    <string name="task_name">Task Name</string>
    <string name="help_feedback"><![CDATA[Help & Feedback]]></string>
    <string name="title_activity_student_courses_tabbed">StudentCoursesTabbed</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_tedx_eeb3">TedxEEB3</string>
    <string name="do_task_question_alert_dialog">Do you want to do this task now?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="stop">STOP</string>
    <string name="do_you_wish_to_leave">Are you sure you want to leave?</string>
    <string name="im_sure">I\'m sure</string>
    <string name="cancel">Cancel</string>
    <string name="study_timer_stopped">The study timer has been cancelled</string>
    <string name="activated_timer_stopped">The activated timer has been cancelled</string>
    <string name="switch_doesnt_work">This switch does not work yet</string>
    <string name="Share_eeb3_string">Have you already installed the new fabulous EEB3 App? If not, why not now? Just download it off the play store at bit.ly/EEB3App!</string>
    <string name="sure_you_want_to_delete_task">Are you sure you want to delete this task?</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">EEB3 App</string>
    <string name="slide_1_desc">Welcome to the EEB3 App and thanks for trying it out! Let\'s start!</string>
    <string name="slide_2_title">Websites</string>
    <string name="slide_2_desc">All your school-related sites at your fingertips!</string>
    <string name="slide_3_title">Assignments</string>
    <string name="slide_3_desc">No need to keep things in your mind, write down your tasks!</string>
    <string name="slide_4_title">Projects</string>
    <string name="slide_4_desc">Easily find out more about the projects at our school!</string>
    <string name="slide_5_title">Widgets</string>
    <string name="slide_5_desc">Use our widgets to personalize your home screen!</string>
    <string name="version_0_9">Version 0.9</string>
    <string name="more_than_500_hours_have_been_spent_to_make_this_app">More than 500 hours have been spent to make this App</string>
    <string name="the_purpose_of_the_eeb3_app_is_to_facilitate_the_needs_of_the_european_school_of_brussels_iii_in_general_to_integrate_as_many_aspects_from_the_school_into_one_android_application">The purpose of the EEB3 App is to facilitate the needs of the European School of Brussels III, in general, to integrate as many aspects from the school into one Android application.</string>
    <string name="copyright_169_ar_studios">Copyright © AR Studios</string>
    <string name="you_must_be_the_change_you_wish_to_see_in_the_world_mahatma_ghandi">You must be the change you wish to see in the world -Mahatma Gandhi</string>
    <string name="absences">Absences</string>
    <string name="today">Today</string>
    <string name="task_timer">Task Timer</string>
    <string name="quot_learning_from_one_s_errors_is_more_valuable_than_gaping_at_other_s_success_quot">\"Learning from one\'s errors is more valuable than gaping at other\'s success\"</string>
    <string name="logo_designers">Logo Designers</string>
    <string name="secondary_idea_generators">Secondary Idea Generators</string>
    <string name="french">French</string>
    <string name="spanish">Spanish</string>
    <string name="german">German</string>
    <string name="greek">Greek</string>
    <string name="with_the_kind_permission_of">With the kind permission of</string>
    <string name="and_the_everlasting_support_of">And the everlasting support of</string>
    <string name="you_must_be_the_change_you_wish_to_see_in_the_world_mahatma_ghandi_2">\'You must be the change you wish to see in the world\' - Mahatma Gandhi</string>
    <string name="introduction">Introduction</string>
    <string name="feeling_lost_can_t_find_what_you_re_looking_for_we_have_a_presentation_video_that_will_guide_you_through_the_app_in_detail">Feeling lost? Can\'t find what you\'re looking for? We have a presentation video that will guide you through the app in detail.</string>
    <string name="watch_the_video">Watch the video</string>
    <string name="presentation_pages">Presentation pages</string>
    <string name="google_play">Google Play</string>
    <string name="support_us">Support us</string>
    <string name="we_re_working_hard_on_making_this_app_better_for_you_if_you_re_satisfied_please_rate_this_app_on_google_play">We\'re working hard on making this app better for you! If you\'re satisfied, please rate this app on Google Play!</string>
    <string name="we_would_like_to_hear_from_you">We would like to hear from you</string>
    <string name="your_input_is_very_valuable_to_us_contact_us_below_and_write_down_your_suggestions_and_feedback">Your input is very valuable to us! Contact us below, and write down your suggestions and feedback!</string>
    <string name="email">Email</string>
    <string name="updates">Updates</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="tasks">Tasks</string>
    <string name="share">Share</string>
    <string name="courses">Courses</string>
    <string name="about">About</string>
    <string name="eeb3">EEB3</string>
    <string name="the_committee_of_pupils_representatives_from_the_international_schools_of_brussels">The committee of pupils\' representatives from the international schools of Brussels</string>
    <string name="overview">OVERVIEW</string>
    <string name="participate">PARTICIPATE</string>
    <string name="websites_caps">WEBSITES</string>
    <string name="title_activity_short_film_festival">ShortFilmFestival</string>
    <string name="action_contact">Contact Us</string>
    <string name="title_activity_eeb__green">EEB_Green</string>
    <string name="dutch">Dutch</string>
    <string name="action_licenses">Licenses</string>
    <string name="english_lang">English</string>
    <string name="introductory_slides">Introductory slides</string>
    <string name="send_us_feedback">Send us feedback</string>
    <string name="contact_us">Contact us</string>
    <string name="title_activity_bissc">BISSCActivity</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="configure">Configure</string>
    <string name="title_activity_xlweekly">XLWeekly</string>
    <string name="upload_a_schedule_to_check_when_you_re_on_the_go">Upload a schedule to check when you\'re on the go!</string>
    <string name="new_task_added">New task added</string>
    <string name="please_wait">Please wait...</string>
    <string name="no_internet">No internet connection</string>
    <string name="retry">RETRY</string>
    <string name="we_ve_put_in_some_insane_time_to_bring_you_this_app_really_the_purpose_of_it_is_to_facilitate_the_needs_of_you_the_students_and_teachers_of_the_european_school_of_brussels_iii">We\'ve put in some insane time to bring you this app. Really, the purpose of it is to facilitate the needs of you, the students and teachers of the European School of Brussels III!</string>
    <string name="version_1_0">Version 1.0</string>
</resources>